--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,6 @@ repositories {
 }
 
 dependencies {
-    // https://github.com/google/gson    
-    implementation 'com.google.code.gson:gson:2.8.5'
     // https://github.com/google/guava
     implementation 'com.google.guava:guava:26.0-jre'
     // https://commons.apache.org/proper/commons-cli/
@@ -95,6 +93,8 @@ dependencies {
     // https://automata.tools/hoa/jhoafparser/
     implementation files('lib/jhoafparser-1.1.1-patched.jar')
 
+    // https://github.com/google/gson
+    testImplementation 'com.google.code.gson:gson:2.8.5'
     // https://github.com/junit-team/junit5/
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.3.0")
