--- a/build.gradle
+++ b/build.gradle
@@ -226,6 +226,18 @@ shadowJar {
     minimize()
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task mavenJars(dependsOn: [jar, sourcesJar, javadocJar])
+
 // ---------------- Script Jobs ----------------
 
 def allStartScripts = createStartScriptTasks("", jar.outputs.files + project.getConfigurations().getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME), scripts)
