--- a/src/main/cpp/example/CMakeLists.txt
+++ b/src/main/cpp/example/CMakeLists.txt
@@ -1,3 +1,8 @@
+cmake_minimum_required(VERSION 3.12)
+if(COMMAND cmake_policy)
+  cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
 # Define Executable
 
 find_package(JNI REQUIRED)
