Implement normalistion procedure and constructions for LTL fragment from the LICS'20 submission.

--- a/config/logging.properties
+++ b/config/logging.properties
@@ -2,7 +2,7 @@
 handlers = java.util.logging.ConsoleHandler
 # Default global logging level.
 # Loggers and Handlers may override this level
-owl.level = FINE
-de.tum.in.jbdd.level = FINER
-java.util.logging.ConsoleHandler.level = FINEST
+owl.level = WARNING
+de.tum.in.jbdd.level = WARNING
+java.util.logging.ConsoleHandler.level = WARNING
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
